# functional_game_engine

./: CMakeLists.txt  README.md
include/components/: reference.hpp  table.hpp
scripts/: build.cmd
src/: main.cpp  table.hpp
src/components/: collection.hpp  component.hpp  table.hpp
test/: asteroid_factory.cpp  asteroid_factory.hpp  draw.cpp  draw.hpp  input.cpp  input.hpp  main.cpp  physics.cpp  physics.hpp  player_control.cpp  player_control.hpp  texture.hpp  types.hpp  vector.hpp
